# Portfolio

./: .gitignore  README.md  codecov.yml
.github/workflows/: LeetCodeSync.yml  build.yml  release-passwordmanager.yml  release.yml
LeetCode/: README.md  trapping_rain_water.cpp
LeetCode/0004_Median_of_Two_Sorted_Arrays/: median_of_two_sorted_arrays.md  source.cpp
LeetCode/0042_Trapping_Rain_Water/: source.cpp  trapping_rain_water.md
LeetCode/0146_LRU_Cache/: lru_cache.cpp  lru_cache.md  source.cpp
LeetCode/1249_Minimum_Remove_to_Make_Valid_Parenthesis/: minimum_remove_to_make_valid_parentheses.md
LeetCode/Easy/0001-two-sum/: README.md  solution.cpp
LeetCode/Easy/0014-longest-common-prefix/: README.md  solution.cpp
LeetCode/Easy/0020-valid-parentheses/: README.md  solution.cpp
LeetCode/Easy/0118-pascals-triangle/: README.md  solution.cpp
LeetCode/Easy/0121-best-time-to-buy-and-sell-stock/: README.md  solution.cpp
LeetCode/Hard/0004-median-of-two-sorted-arrays/: README.md
LeetCode/Hard/0004_Median_of_Two_Sorted_Arrays/: median_of_two_sorted_arrays.cpp  median_of_two_sorted_arrays.md
LeetCode/Hard/0042-trapping-rain-water/: README.md
LeetCode/Hard/0042_Trapping_Rain_Water/: trapping_rain_water.cpp
LeetCode/Medium/0002-add-two-numbers/: README.md  solution.cpp
LeetCode/Medium/0003-longest-substring-without-repeating-characters/: README.md  readme.md  solution.cpp
LeetCode/Medium/0005-longest-palindromic-substring/: README.md  solution.cpp
LeetCode/Medium/0011-container-with-most-water/: README.md  solution.cpp
LeetCode/Medium/0022-generate-parentheses/: README.md  solution.cpp
LeetCode/Medium/0049-group-anagrams/: README.md  solution.cpp
LeetCode/Medium/0056-merge-intervals/: README.md  solution.cpp
LeetCode/Medium/0056_Merge_Intervals/: merge_intervals.md
LeetCode/Medium/0146-lru-cache/: README.md  readme.md
LeetCode/Medium/0200-number-of-islands/: README.md  solution.cpp
LeetCode/Medium/1249-minimum-remove-to-make-valid-parentheses/: README.md  solution.cpp
LeetCode/Medium/1249_Minimum_Remove_to_Make_Valid_Parenthesis/: minimum_remove_to_make_valid_parentheses.md
LeetCode/Medium/200-number-of-islands/: README.md
Projects/AES-GCM/: AES-GCM.qtvscr  AES-GCM.sln  AES-GCM.slnx  AES-GCM.vcxproj  AES-GCM.vcxproj.filters  AES_GCM.cpp  AES_GCM.h  AES_GCM_decryption.cpp  CMakeList.txt  CMakeLists.txt  CMakePresets.json  GetUserInput.cpp  InputGUI.cpp  InputWidget.cpp  InputWidget.h  LICENSE.md  LICENSES-THIRD-PARTY.md  MainGUI.cpp  MainGUI.h  ModeButton.cpp  ModeButton.h  PWLineEdit.cpp  PWLineEdit.h  ProgressGUI.cpp  ProgressGUI.h  ProgressWidget.cpp  ProgressWidget.h  README.md  README.txt  Worker.cpp  Worker.h  aes-gcm.cpp  aes-gcm.h  argon2id.cpp  cipher  desktop.ini  encrypt.cpp  gui.cpp  header.h  library.cpp  (+2 more)
Projects/AES-GCM/Benchmark/: Benchmark.cpp
Projects/AES-GCM/Common/: header.h  main.cpp
Projects/AES-GCM/Core/: AES_GCM.cpp  AES_GCM.h  AES_GCM_dec.cpp  AES_GCM_decryption.cpp  AES_GCM_enc.cpp  AES_GCM_encryption.cpp  Worker.cpp  Worker.h
Projects/AES-GCM/GUI/: InputGUI.cpp  InputGUI.h  MainGUI.cpp  MainGUI.h  ModeButton.h  PWLineEdit.cpp  PWLineEdit.h  ProgressGUI.cpp  ProgressGUI.h
Projects/AES-GCM/Tests/: AES_GCM_Test.cpp  PasswordTest.cpp  UtilsTest.cpp
Projects/AES-GCM/Utils/: File.h  FileHandle.h  Password.cpp  Password.h  SecureByteArray.h  UserInput.h  library.cpp
Projects/FileEncryption/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  FileEncryption.filters  README.md  vcpkg.json
Projects/FileEncryption/Common/: header.h
Projects/FileEncryption/Core/: AES_GCM_enc.cpp
Projects/FileEncryption/GUI/: MainGUI.h
Projects/FileEncryption/Tests/: AES_GCM_Test.cpp  PasswordTest.cpp  UtilsTest.cpp
Projects/FileEncryption/Utils/: library.cpp
Projects/FileEncryption/src/Benchmark/: Benchmark.cpp
Projects/FileEncryption/src/Common/: constants.h  header.h  main.cpp
Projects/FileEncryption/src/Core/: AES_GCM.cpp  AES_GCM.h  AES_GCM_dec.cpp  AES_GCM_enc.cpp  Worker.h
Projects/FileEncryption/src/GUI/: InputGUI.h  MainGUI.cpp  MainGUI.h  ModeButton.cpp  ModeButton.h  PWLineEdit.cpp  PWLineEdit.h  ProgressGUI.cpp  ProgressGUI.h
Projects/FileEncryption/src/Tests/: AES_GCM_Test.cpp  PasswordTest.cpp  UtilsTest.cpp
Projects/FileEncryption/src/Utils/: Password.cpp  Password.h  library.cpp  library.h
Projects/PasswordManager/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSES-THIRD-PARTY.md  README.md
Projects/PasswordManager/src/Common/: constants.h  header.h  main.cpp
Projects/PasswordManager/src/Core/: AES_GCM.cpp  AES_GCM.h  AES_GCM_dec.cpp  AES_GCM_enc.cpp  Entry.cpp  Entry.h  Vault.cpp  Vault.h  Vault_entry.cpp  Vault_file.cpp  Vault_vault.cpp
Projects/PasswordManager/src/GUI/: ChangePWGUI.cpp  ChangePWGUI.h  EntryGUI.cpp  EntryGUI.h  ListGUI.cpp  ListGUI.h  LoginGUI.cpp  LoginGUI.h  MainGUI.cpp  MainGUI.h  PWLineEdit.cpp  PWLineEdit.h  PasswordGUI.cpp  PasswordGUI.h
Projects/PasswordManager/src/Tests/: AES_GCM_Test.cpp  EntryTest.cpp  PasswordTest.cpp  UtilsTest.cpp  VaultEntryTest.cpp  VaultFileTest.cpp
Projects/PasswordManager/src/Utils/: Password.cpp  Password.h  library.cpp  library.h
